fix scroll btn visible on page load bug

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ html{
 }
 .scrollbtn{
 	opacity: 0;
-	transition: opacity 2s;
+	transition: opacity 0s;
 	outline: none;
 	font-family: 'Source Code Pro', monospace;
 	/*extra left and right margin to make sure the button wraps to new line*/
